--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Proxy24 Consultoria Tic.</title>
   <meta name="description" content="Your Description">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+  <listyle.css">
   <style>
     /* Estilos para que el video cubra toda la pantalla */
     .video-background {
