--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <header>
     <!-- Logo, Título y Descripción -->
     <div class="header_img flex_column_center">
-      <img src="img/logo.jpg" alt="Logo" />
+      <img src="logo.jpg" alt="Logo" />
     </div>
     <div class="header_text flex_column_center">
       <h1 class="header_h_item">Proxy24</h1>
