--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       <h2 class="header_h_item">Consultoria Tic´s.</h2>
 
       <!-- Botón de WhatsApp debajo de la descripción -->
-      <a href="https://wa.me/1234567890?text=¡Hola! Me gustaría más información." 
+      <a href="https://wa.me/7718892098?text=¡Hola! Me gustaría más información." 
          class="whatsapp-button" target="_blank">
-        <img src="img/image.png" alt="">
+        <img src="image.png" alt="">
         Informacion
       </a>
     </div>
@@ -93,14 +93,14 @@
   <main>
     <section id="main_section_container_1" class="flex_column_center">
       <div class="main_text_item">
-        <p>The project, where you can easily change texts, icons, colours, boxes, and images, is live!</p>
+        <p></p>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="footer_div_item flex_row_center">
-      <a class="footer_a_item" href="#link">Your Name</a>&nbsp;| Copyright Text
+      <a class="footer_a_item" href="#link">proxy24.tec@gmail.com</a>&nbsp;| cotización
     </div>
   </footer>
 
